# amplifier-bundle-comic-strips

./: .gitignore  README.md  SCRATCH.md  bundle.md
agents/: character-designer.md  cover-artist.md  panel-artist.md  storyboard-writer.md  strip-compositor.md  style-curator.md
behaviors/: comic-strips.yaml
context/: comic-instructions.md  layout-patterns.md
docs/: DESIGN-comic-create-uri-abstraction.md  DESIGN-uri-v2-scoped-resources.md  LAYOUT_VALIDATION_PROCESS.md  PLAN-comic-create-uri-abstraction.md  PLAN-uri-v2-scoped-resources.md
examples/: README.md  comic-strips-bundle-creation-jjk.html  comic-strips-v4-origin-story.html  e2e-watchmen-test.html  naruto-layout-validation-e2e.html
modes/: comic-brainstorm.md  comic-design.md  comic-plan.md  comic-publish.md  comic-review.md
modules/tool-comic-assets/: pyproject.toml
modules/tool-comic-assets/amplifier_module_comic_assets/: __init__.py  comic_uri.py  encoding.py  models.py  service.py  storage.py
modules/tool-comic-assets/tests/: conftest.py  test_comic_uri.py  test_concurrency.py  test_embedding.py  test_encoding.py  test_models.py  test_path_safety.py  test_preview.py  test_pyproject_dependencies.py  test_removed_base64.py  test_search.py  test_service.py  test_service_uris.py  test_storage.py  test_tools.py  test_uri_input.py
modules/tool-comic-create/: pyproject.toml
modules/tool-comic-create/amplifier_module_comic_create/: __init__.py  html_renderer.py  vision_backends.py
modules/tool-comic-create/tests/: conftest.py  test_assemble_comic.py  test_behavior_yaml.py  test_built_from.py  test_cast_page_and_overlays.py  test_create_character_ref.py  test_create_cover.py  test_create_panel.py  test_html_renderer.py  test_image_optimization.py  test_integration.py  test_layout_validation.py  test_new_provider_api.py  test_review_asset.py  test_tool_skeleton.py  test_vision_backends.py  test_vision_helpers.py
modules/tool-comic-image-gen/: pyproject.toml  pyrightconfig.json
modules/tool-comic-image-gen/amplifier_comic_image_gen/: __init__.py  _version.py  model_map.py  model_selector.py
modules/tool-comic-image-gen/amplifier_comic_image_gen/providers/: __init__.py  gemini_images.py  openai_images.py
modules/tool-comic-image-gen/amplifier_module_comic_image_gen/: __init__.py  model_map.py  model_selector.py
modules/tool-comic-image-gen/amplifier_module_comic_image_gen/providers/: __init__.py  gemini_images.py  openai_images.py
modules/tool-comic-image-gen/tests/: conftest.py  test_discovery.py  test_drain_executor.py  test_gemini_images.py  test_model_map.py  test_model_selector.py  test_openai_images.py  test_routing.py  test_tool.py  test_version.py
recipes/: design-characters.yaml  issue-art.yaml  issue-compose.yaml  issue-retry.yaml  saga-plan.yaml  session-to-comic.yaml  smoke-validate-storyboard.yaml  test-sub-recipe-call.yaml
tests/: conftest.py  test_agent_tools_sections.py  test_character_designer_single_item.py  test_comic_brainstorm_mode.py  test_comic_design_mode.py  (+37 more)
(+48 files in other folders)
