[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-comic-image-gen"
version = "0.2.0"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.entry-points."amplifier.modules"]
tool-comic-image-gen = "amplifier_module_comic_image_gen:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_comic_image_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

